htdocs/theme/raw/sass/layout/_footer.scss
.footer {
    background-color: $site-footer-bg;
    .footer-nav {
        font-size: $font-size-sm;

        @include media-breakpoint-down(sm) {
            float: none !important;
            text-align: center;
            display: block;
            margin-top: 1em;
        }

        .icon-stack {
            font-size: $font-size-base * 0.715;
        }
        .nav-link {
            color: $site-footer-color;
            &:hover,
            &:focus {
                background-color: $site-footer-hover-bg;
                color: $site-footer-hover-color;
            }
        }
    }

    .footer-performance-info {
        font-size: $font-size-sm;
    }
    .metadata {
        color: $site-footer-color;
    }
    .footer-inner {
        @extend .clearfix;
        padding-top: 15px;
        padding-bottom: 30px;
        .mahara-logo {
            margin-right: 20px;
            @include media-breakpoint-down(sm) {
                float: none !important;
                text-align: center;
            }
        }
        .mahara-version {
            padding-top: 10px;
            @include media-breakpoint-down(sm) {
                float: none !important;
                text-align: center;
            }
        }
        .site-performace {
            clear: both;
            padding-top: 10px;
        }
    }
    &.upgrade-footer {
        .mahara-logo {
            @include media-breakpoint-up(md) {
                float: left;
            }
        }
        .release-info {
            margin: 10px 0;
            @include media-breakpoint-up(md) {
                float: right;
            }
        }
    }
}

.mahara-logo a {
    height: 37px;
    display: inline-block;
    .mahara-footer-logo {
        height: 100%;
        max-width: none;
    }
}

